[gd_scene load_steps=9 format=3 uid="uid://dml41cp7fs4r3"]

[ext_resource type="Script" path="res://scenes/gui/components/currency_ui.gd" id="1_kylbg"]
[ext_resource type="Shader" path="res://shaders/change_color.gdshader" id="1_q67fe"]
[ext_resource type="Texture2D" uid="uid://bck8nvgvpa4fw" path="res://assets/image/icon/gold.svg" id="2_f3imw"]
[ext_resource type="FontFile" uid="uid://byjdovawflxyj" path="res://assets/fonts/BENDER.OTF" id="4_g6xh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fc5f"]
bg_color = Color(0.84375, 0.800449, 0.285645, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3vi8"]
shader = ExtResource("1_q67fe")
shader_parameter/from = Color(0, 0, 0, 1)
shader_parameter/to = Color(0.854167, 0.613932, 0, 1)
shader_parameter/threshold = 0.1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0gtf"]

[sub_resource type="LabelSettings" id="LabelSettings_1khxs"]
font = ExtResource("4_g6xh5")
font_size = 18

[node name="CurrencyUI" type="HBoxContainer"]
offset_right = 96.0
offset_bottom = 27.0
tooltip_text = "营地保有资产"
theme_override_constants/separation = 0
script = ExtResource("1_kylbg")

[node name="CurrencyItem" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3fc5f")

[node name="MarginContainer" type="MarginContainer" parent="CurrencyItem"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="CurrencyItem/MarginContainer"]
material = SubResource("ShaderMaterial_r3vi8")
layout_mode = 2
texture = ExtResource("2_f3imw")
expand_mode = 3
stretch_mode = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
theme_override_styles/panel = SubResource("StyleBoxFlat_s0gtf")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="CurrencyValue" type="Label" parent="PanelContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "111111"
label_settings = SubResource("LabelSettings_1khxs")
vertical_alignment = 1
